--- a/login.html
+++ b/login.html
@@ -6,52 +6,72 @@
 </head>
 
 <body>
+    <div class="auth-container">
+        <div class="background-blur"></div>
+        <div class="background-blur-bottom"></div>
 
-    <div class="container">
-        <h1>EduQuest Arcade</h1>
+        <div class="auth-box">
+            <h1>EDUQUEST</h1>
+            <p>Initialize your academy credentials</p>
 
-        <!-- Tabs -->
-        <input type="radio" name="tab" id="login-tab" checked>
-        <input type="radio" name="tab" id="signup-tab">
+            <!-- Tabs -->
+            <div class="tabs">
+                <button class="tab active" onclick="showForm('login')">Sign In</button>
+                <button class="tab" onclick="showForm('signup')">Sign Up</button>
+            </div>
 
-        <div class="tabs">
-            <label for="login-tab">Login</label>
-            <label for="signup-tab">Sign Up</label>
-        </div>
+            <!-- Login Form -->
+            <form id="login-form" class="active" method="POST" action="auth.php">
+                <label for="login_username">Email</label>
+                <input type="text" id="login_username" name="login_username" placeholder="Enter email" required>
 
-        <!-- Forms -->
-        <div class="forms">
+                <label for="login_password">Password</label>
+                <input type="password" id="login_password" name="login_password" placeholder="Enter Password" required>
 
-            <!-- LOGIN -->
-            <form class="form login-form" action="auth.php" method="POST">
-                <label>Username</label>
-                <input type="text" name="login_username" required>
-
-                <label>Password</label>
-                <input type="password" name="login_password" required>
-
-                <button type="submit" name="login_submit">Login</button>
+                <button type="submit" name="login_submit" class="submit-btn">Sign In</button>
             </form>
 
-            <!-- SIGNUP -->
-            <form class="form signup-form" action="auth.php" method="POST">
-                <label>Username</label>
-                <input type="text" name="signup_username" required>
+            <!-- Signup Form -->
+            <form id="signup-form" method="POST" action="auth.php">
+                <label for="signup_username">Username</label>
+                <input type="text" id="signup_username" name="signup_username" placeholder="Enter username" required>
 
-                <label>Email</label>
-                <input type="email" name="signup_email" required>
+                <label for="signup_email">Email</label>
+                <input type="email" id="signup_email" name="signup_email" placeholder="Enter email" required>
 
-                <label>Password</label>
-                <input type="password" name="signup_password" required>
+                <label for="signup_password">Password</label>
+                <input type="password" id="signup_password" name="signup_password" placeholder="Enter Password" required>
 
-                <label>Confirm Password</label>
-                <input type="password" name="signup_confirm" required>
+                <label for="signup_confirm">Confirm Password</label>
+                <input type="password" id="signup_confirm" name="signup_confirm" placeholder="Confirm Password" required>
 
-                <button type="submit" name="signup_submit">Sign Up</button>
+                <button type="submit" name="signup_submit" class="submit-btn">Sign Up</button>
             </form>
 
+            <div class="footer">
+                &#10003; Secure Connection
+            </div>
         </div>
     </div>
 
+    <script>
+        function showForm(form) {
+            const loginForm = document.getElementById('login-form');
+            const signupForm = document.getElementById('signup-form');
+            const tabs = document.querySelectorAll('.tab');
+
+            if (form === 'login') {
+                loginForm.classList.add('active');
+                signupForm.classList.remove('active');
+                tabs[0].classList.add('active');
+                tabs[1].classList.remove('active');
+            } else {
+                signupForm.classList.add('active');
+                loginForm.classList.remove('active');
+                tabs[1].classList.add('active');
+                tabs[0].classList.remove('active');
+            }
+        }
+    </script>
 </body>
 </html>
