--- a/login.html
+++ b/login.html
@@ -22,8 +22,8 @@
 
             <!-- Login Form -->
             <form id="login-form" class="active" method="POST" action="auth.php">
-                <label for="login_username">Email</label>
-                <input type="text" id="login_username" name="login_username" placeholder="Enter email" required>
+                <label for="login_email">Email</label>
+                <input type="text" id="login_email" name="login_email" placeholder="Enter email" required>
 
                 <label for="login_password">Password</label>
                 <input type="password" id="login_password" name="login_password" placeholder="Enter Password" required>
