--- a/leaderboard.html
+++ b/leaderboard.html
@@ -107,11 +107,13 @@
 
       <!-- TODO: expand leaderboard to show all users -->
       <!-- Button -->
-      <a href="#" class="submit-btn leaderboard-button">VIEW ALL</a>
+      <button id="viewAllButton" class="submit-btn leaderboard-button" aria-haspopup="dialog"
+        aria-controls="fullLeaderboardModal">VIEW ALL</button>
 
     </div>
   </div>
 
+  <script src="leaderboard.js"></script>
 </body>
 
 </html>
