--- a/lobby.html
+++ b/lobby.html
@@ -37,7 +37,7 @@
     function goToGame(event) {
         event.preventDefault();
         // Adjust path when you add real games
-        window.location.href = "games/catch_stars.html";
+        window.location.href = "games/math_catch.html";
     }
 </script>
 
