--- a/lobby.html
+++ b/lobby.html
@@ -24,7 +24,7 @@
         <div class="tabs">
             <!-- One type for now -->
             <button class="tab active" id="catchStars" onclick="goToGame(event)">
-                Catch the Stars
+                Math Catch
             </button>
         </div>
 
