--- a/lobby.html
+++ b/lobby.html
@@ -36,8 +36,7 @@
 <script>
     function goToGame(event) {
         event.preventDefault();
-        // Adjust path when you add real games
-        window.location.href = "games/math_catch.html";
+        window.location.href = "games/math_catch/build/web/index.html";
     }
 </script>
 
